# MentorMatch

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt
api/: database.py  main.py
api/SMTP/: init_server.py
api/admin/: admin_router.py
api/admin/admin_sign_up/: admin_sign_in.py  base_model.py
api/admin/approve_request/: approve_request.py  base_model.py
api/admin/create_mentor/: base_model.py  create_mentor.py
api/admin/delete_mentor/: delete_mentor.py
api/admin/get_mentor_by_id/: get_mentor_by_id.py
api/admin/get_mentors_list/: get_mentors_list.py
api/admin/get_requests_list/: get_requests_list.py
api/admin/get_user_by_id/: get_user_by_id.py
api/admin/get_users_list/: get_users_list.py
api/admin/is_admin/: is_admin.py
api/mail/: mail.py
api/mentor/: mentor_router.py
api/mentor/get_student/: get_student.py  response_model.py
api/mentor/get_students/: get_students.py  response_model.py
api/mentor/send_request/: base_model.py  send_request.py
api/offer/: offer_router.py
api/offer/answer_offer/: answer_offer.py  base_model.py
api/offer/post_offer/: base_model.py  post_offer.py
api/user/: base_model.py  user_router.py
api/user/avatar/: get_avatar.py
api/user/get_mentor_by_id/: get_mentors_by_id.py
api/user/get_mentor_of_user/: get_mentors_list.py  response_model.py
front/: package.json  svelte.config.js
nginx/: nginx.conf
src/: main.py
tests/e2e/: ping.py
web/: Dockerfile  nginx.conf  package.json  svelte.config.js
web/src/: app.css  hooks.ts
(+53 files in other folders)
