[tool.poetry]
name = "mentors-for-students"
version = "1.0.0"
description = "Mentors fot students"
authors = ["AKRBOUT"]
packages = [{ include = "simple-avatars" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.25.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"